--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap');
+
 *,::after,::before{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.App{
+  width: 100%;
+  height: 100vh;
+  margin: auto;
+  font-family: "Red Rose", sans-serif;
+}
+/* HOME PAGE */
+.main{
+  width: 100%;
+}
+
+/* NAVBAR */
+.navbar{
+  height: 48px;
+  width: 100%;
+  margin: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  cursor: pointer;
+}
+.metabnb-logo{
+  max-width: 230px;
+  max-height: 36px;
+}
+.nav-links{
+  list-style: none;
+  display: inline-flex;
+  margin-right: 50px;
+}
+.nav-links a{
+  text-decoration: none;
+  color: black;
+}
+.nav-links a:hover{
+  color: #A02279;
+}
+button.connect-wallet{
+  width: 170px;
+  height: 100%;
+  border-radius: 8px;
+  color: white;
+  border: 1px solid #A02279;
+  background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
+}
+.connect-wallet:hover{
+  border: 2px solid blueviolet;
+  color: black;
+  cursor: pointer;
+  box-shadow: 0 0 15px #A02279;
 }
 
