style: third section in Home page done

--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,6 @@
   cursor: pointer;
   box-shadow: 0 0 15px #A02279; 
 }
-
 .official-logos{
   display: flex;
   background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
@@ -95,6 +94,89 @@
   margin-top: 15px;
   margin-bottom: 15px;
 }
+
+.section-2{
+  padding: 30px 0 50px 0 ;
+  /* margin: auto; */
+  /* padding: 0 30px 0 30px; */
+  /* display: flex;
+  flex-direction: column; */
+}
+.section-2 h2{
+  font-size: 59px;
+  font-weight: 700;
+  text-align: center;
+  margin: 20px 0 50px 0;
+}
+.cards-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
+}
+.card--meta{
+  width: 290px;
+  height: 370px;
+  border: 1px solid grey;
+  border-radius: 13px;
+  padding: 15px;
+}
+.image--meta{
+  max-width: 260px;
+  max-height: 265px;
+}
+.card--details p{
+  font-size: 12px;
+  line-height: 20px;
+}
+.bold{
+  font-weight: 700;
+}
+.card-info--duration, .card-dist--avail{
+  display: flex;
+  justify-content: space-between;
+}
+.card-star--rating{
+  margin-top: 10px;
+}
+
+.section-3{
+  /* height: 770px; */
+  background: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5.5rem;
+}
+.section-3-content{
+  color: white;
+  line-height: 60px;
+}
+.section-3-content h3{
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 40px;
+}
+.section-3 p{
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 35px;
+  margin-bottom: 40px;
+  max-width: 400px;
+}
+.image-group-2{
+  width: 704px;
+  height: 574px;
+}
+button.learn-more{
+  border-radius: 12px;
+  width: 156px;
+  height: 48px;
+  color: #A02279;
+  border: 1px solid #A02279;
+  cursor: pointer;
+}
+
 
 
 /* MOBILE SCREEN SIZES */
