--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -82,7 +82,7 @@
     }
     .links-container{
       display: flex;
-      align-items: start;
+      align-items: flex-start;
       justify-content: center;
       flex-wrap: wrap; 
     }
