--- a/src/App.css
+++ b/src/App.css
@@ -246,6 +246,7 @@ button.learn-more{
   background: none;
   border: none;
   font-size: 18px;
+  cursor: pointer;
 }
 .metamask-connect-link, .wallet-connect-link{
   width: 90% auto;
@@ -254,16 +255,18 @@ button.learn-more{
   border-radius: 12px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-
+  justify-content: space-between;
+  padding: 15px;
 }
 .walletconnect-modal-icon, .metamask-modal-icon{
   width: 200px;
-  height: 40px;
+  height: 45px;
 }
 .choose-wallet, .metamask-connect-link, .wallet-connect-link{
   margin: 10px  20px 10px 20px;
-
+}
+.metamask-connect-link:hover, .wallet-connect-link:hover{
+  background: #CFD8DC;
 }
 
 
@@ -318,6 +321,17 @@ button.learn-more{
   }
 }
 
+@media screen and (max-width:600px) {
+  .modalBackground{
+    position: absolute;
+    top: 300px;
+  }
+  .modalContainer{
+    width: 300px;
+    height: 300px;
+  }
+  
+}
 @media screen and (max-width:480px) {
   .section-1 h2{
     font-size: 36px;
