--- a/src/App.css
+++ b/src/App.css
@@ -52,13 +52,14 @@
   height: 54px;
   margin-top: 3rem;
 }
-.search-location{
+input.search-location{
   width: 390px;
   height: 100%;
   border: 1px solid grey;
   font-size: 20px;
   border-radius: 8px 0 0 8px;
   font-family: "Red Rose", sans-serif;
+  text-indent: 15px;
 }
 .search-location:hover{
   border: 2px solid blueviolet;
@@ -223,7 +224,14 @@ button.learn-more{
 /* MODAL BOX STYLE */
 .modalBackground{
   position: absolute;
-  top: 170px;
+  height: 100vh;
+  width: 100vw;
+  top: 300px;
+  background: rgba(64, 64, 64, 0.3);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .modalContainer{
   width: 500px;
