--- a/src/App.css
+++ b/src/App.css
@@ -223,24 +223,23 @@ button.learn-more{
 
 /* MODAL BOX STYLE */
 .modalBackground{
-  position: absolute;
+  position: fixed;
   height: 100vh;
   width: 100vw;
-  top: 300px;
+  top: 0;
   background: rgba(64, 64, 64, 0.3);
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
 .modalContainer{
   width: 500px;
   height: 300px;
-  border: 2px solid grey;
   border-radius: 16px;
   background: #FFFFFF;
   display: flex;
   flex-direction: column;
+  z-index: 0;
 }
 .modalContainer > hr{
   width: 100%;
@@ -330,16 +329,16 @@ button.learn-more{
 }
 
 @media screen and (max-width:600px) {
-  .modalBackground{
-    position: absolute;
-    top: 300px;
-  }
+ /* Modal box responsive style */
   .modalContainer{
     width: 300px;
     height: 300px;
+    z-index: 0;
   }
   
 }
+
+
 @media screen and (max-width:480px) {
   .section-1 h2{
     font-size: 36px;
